tests/ui/generics_with_lifetimes.stderr
error[E0277]: the trait bound `MyStructBuilder<'_, '_, '_, false, true, String>: HasReq1` is not satisfied
  --> tests/ui/generics_with_lifetimes.rs:20:10
   |
20 |         .build();
   |          ^^^^^ the trait `HasReq1` is not implemented for `MyStructBuilder<'_, '_, '_, false, true, String>`
   |
   = help: the trait `HasReq1` is implemented for `MyStructBuilder<'a, 'b, 'c, true, P1, T>`
note: required by a bound in `MyStructBuilder::<'a, 'b, 'c, P0, P1, T>::build`
  --> tests/ui/generics_with_lifetimes.rs:1:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MyStructBuilder::<'a, 'b, 'c, P0, P1, T>::build`
   = note: this error originates in the derive macro `tidy_builder::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
